<?xml version="1.0"?>
<package>
  <name>joint_trajectory_action_controller</name>
  <version>0.3.0</version>
  <description> Translates the produced trajectory into an action.</description>
  <maintainer email="nihad.sa@hotmail.de">Nihad Saliji</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 	
  <build_depend>moveit_core</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>	
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
</package>
