<package>
  <name>rotors_description</name>
  <version>0.3.0</version>
  <description>Customized rotors_description package provides URDF models of the AscTec multicopters and Realsense Camera</description>

  <maintainer email="nihad.sa@hotmail.de">Nihad Saliji</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
